<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="app_name">雪球股票</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="abort_set_pattern_lock">是否放弃开启手势密码</string>
    <string name="abort_update_pattern_lock">是否放弃修改手势密码</string>
    <string name="about">关于</string>
    <string name="account_bind">帐号绑定</string>
    <string name="account_manage">帐号管理</string>
    <string name="accumulative_label">累计净值：</string>
    <string name="action_send">发送</string>
    <string name="add_attention">加关注</string>
    <string name="add_favorite">收藏</string>
    <string name="add_more_cal_info">+添加更多信息</string>
    <string name="add_new_events">新建事件</string>
    <string name="add_stock">+马上添加股票</string>
    <string name="after_hours">盘后  </string>
    <string name="aleady_canceled">已取消</string>
    <string name="aleady_favorited">已收藏</string>
    <string name="alert_delete_cal">确认要删除当前事件吗？</string>
    <string name="all">全部</string>
    <string name="all_comments">所有点评</string>
    <string name="all_day">全天</string>
    <string name="already_followed">已关注</string>
    <string name="already_save_to_draft">内容已保存至草稿箱</string>
    <string name="answer_info_detail">请勿在回复中进行股票推荐、非法提供买卖建议、承诺收益、以及变相提供根据法律规定需要相应牌照和登记的证券投资顾问服务, 对股票的分析仅代表个人观点, 不可对任何人形成投资建议.</string>
    <string name="answer_info_warning">违反以上规定的内容将会被删除, 严重者将对账号进行相应处理</string>
    <string name="answer_information">回复须知</string>
    <string name="answer_question">回复ta的提问</string>
    <string name="api_ip">API IP</string>
    <string name="app_has_no_new_version">没有发现新版本</string>
    <string name="application">应用</string>
    <string name="apply_join">申请加入</string>
    <string name="apply_new_stock">新股申购</string>
    <string name="approve">通过</string>
    <string name="arrow">箭头</string>
    <string name="article_from">来自</string>
    <string name="ask_hint">塞多少钱给TA</string>
    <string name="ask_rule">"提问被对方回复后，所回复内容的打赏将与你5:5分成; 
如果对方超过48小时未回复，红包将自动退回."</string>
    <string name="at_input_tips">输入昵称或选择最近@过的人</string>
    <string name="attention">关注</string>
    <string name="available_fund">可用资金</string>
    <string name="avg_position">持仓平均仓位</string>
    <string name="ballot">中签</string>
    <string name="before_hours">盘前  </string>
    <string name="being_processed">请求处理中…</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="black_mode">黑色主题</string>
    <string name="blocked">对方已将你拉黑，不能发出提问</string>
    <string name="blocking">你已将对方拉黑，不能发出提问</string>
    <string name="blue_mode">蓝色主题</string>
    <string name="bond_fund">基金债券</string>
    <string name="bottom_limit">最少金额为1元</string>
    <string name="bound_phone_for_login">请填写你的手机号，绑定后可用来登录雪球</string>
    <string name="bound_phone_for_security">为确保交易安全，请绑定手机号验证身份</string>
    <string name="broker_api_ip">券商测试IP</string>
    <string name="broker_manager">我的券商管理</string>
    <string name="browse_settings">浏览设置</string>
    <string name="btn_label_getback_password">取回密码</string>
    <string name="buy">买</string>
    <string name="buy_back_hu_min">沪市(十万起售)</string>
    <string name="buy_back_name">%s天期</string>
    <string name="buy_back_shen_min">深市(一千起售)</string>
    <string name="buy_latest_rb">购买最新调仓</string>
    <string name="buy_pf">认 购</string>
    <string name="buy_power">购买力</string>
    <string name="cal_alert">提醒</string>
    <string name="cal_calendar_uninvallid">请选择日历</string>
    <string name="cal_desc_uninvalid">描述不能超过100个字符</string>
    <string name="cal_end">结束时间</string>
    <string name="cal_event_stock_uninvalid">请选择个股事件类型</string>
    <string name="cal_event_tips">事件提醒：</string>
    <string name="cal_event_uninvalid">请选择事件类型</string>
    <string name="cal_mark">备注</string>
    <string name="cal_place">地点</string>
    <string name="cal_place_uninvalid">地址不能超过20个字符</string>
    <string name="cal_search_stock">搜索股票</string>
    <string name="cal_start">开始时间</string>
    <string name="cal_start_date_uninvalid">请选择开始时间</string>
    <string name="cal_symbol_title">%1$s大事件</string>
    <string name="cal_timezone">时区</string>
    <string name="cal_title_uninvalid">标题为0–50个字符</string>
    <string name="cal_uninvalid_datetime">结束时间需晚于开始时间</string>
    <string name="calendar_text">日历</string>
    <string name="camera_capturing">正在处理图片,请稍后</string>
    <string name="camera_hint">请保证照片在相框中</string>
    <string name="camera_redo">重拍</string>
    <string name="can_comment_me">可以评论我的讨论</string>
    <string name="can_not_ask_yourself">不能向自己发起提问</string>
    <string name="cancel">取消</string>
    <string name="cancel_attention_stock">取消</string>
    <string name="cancel_block">取消拉黑</string>
    <string name="cancel_favorite">取消收藏</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_status_promotion_user_profile">取消置顶</string>
    <string name="carrier">运营商</string>
    <string name="change_environment">环境配置</string>
    <string name="change_mode">切换主题</string>
    <string name="change_password">修改密码</string>
    <string name="check_former_account">查看原账号</string>
    <string name="check_order">委托单</string>
    <string name="china">中国大陆</string>
    <string name="city_default_value">城市/地区</string>
    <string name="city_title">城市/地区</string>
    <string name="city_unknow">未知</string>
    <string name="city_unlimited">不限</string>
    <string name="clear_all">全部清空</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_draft">清空</string>
    <string name="clear_history">清空历史</string>
    <string name="clear_history_search">清空历史记录</string>
    <string name="clear_save_draft">清空内容</string>
    <string name="click_to_register">点击注册</string>
    <string name="client">客户端</string>
    <string name="client_version">客户端版本</string>
    <string name="close">关闭</string>
    <string name="close_cube">关停组合</string>
    <string name="close_sp_cube">关停(退赛)</string>
    <string name="column_title_amount">名称,当前价,成交额</string>
    <string name="column_title_bitcoin">名称,最新成交价,成交量</string>
    <string name="column_title_bond_buy_back">名称,年收益率,收益/十万</string>
    <string name="column_title_fund_currency">名称,万份收益,七日年化</string>
    <string name="column_title_hgt_ah">名称,H股(延时),A股,溢价(H/A)</string>
    <string name="column_title_hot">名称,趋势,涨跌幅</string>
    <string name="column_title_industry">名称,涨跌幅,领涨股</string>
    <string name="column_title_new_ipo">名称,当前价,发行价</string>
    <string name="column_title_preipo_hs">名称,发行价,申购日期</string>
    <string name="column_title_preipo_us">名称,发行价,上市日期</string>
    <string name="column_title_private_fund">名称,单位净值,涨幅</string>
    <string name="column_title_rise_fall">名称,当前价,涨跌幅</string>
    <string name="column_title_top_deal">名称,当前价,交易</string>
    <string name="column_title_top_follow">名称,当前价,关注数</string>
    <string name="column_title_top_status">名称,当前价,讨论数</string>
    <string name="column_title_turnover_rate">名称,当前价,换手率</string>
    <string name="comment">评论</string>
    <string name="comment_add_prefix">回复%1$s</string>
    <string name="comment_cannot_like_self">不能顶自己发出的评论</string>
    <string name="comment_copy">复制评论</string>
    <string name="comment_count">评论 %1$s</string>
    <string name="comment_loading">加载评论中…</string>
    <string name="comment_me_string">评论我的</string>
    <string name="comment_posted_by_me">我发出的评论</string>
    <string name="comment_recieve">评论我的</string>
    <string name="comment_share">分享</string>
    <string name="comment_sort_order">最早</string>
    <string name="comment_sort_reverse">最新</string>
    <string name="comment_talks">查看对话</string>
    <string name="comment_wonderful">顶</string>
    <string name="common_attention_people">我们共同关注%1$s人</string>
    <string name="common_attention_stock">我们共同关注%1$s股票</string>
    <string name="communication_push">交流推送</string>
    <string name="complete">完成</string>
    <string name="concern_people">我关注的人</string>
    <string name="confirm">确定</string>
    <string name="confirm_block">确认拉黑此用户吗？</string>
    <string name="confirm_cancel_attention_people">确定不再关注此人?</string>
    <string name="confirm_clear_group_apply">确定忽略当前所有加群申请？</string>
    <string name="confirm_delete">确认删除吗？</string>
    <string name="confirm_delete_attention">确定不再关注%1$s ？</string>
    <string name="confirm_destroy_apply">忽略%s的入群申请</string>
    <string name="confirm_reportspam">确定举报吗？</string>
    <string name="confirm_title">提示</string>
    <string name="confrim_exit_logon">是否确定退出登录？</string>
    <string name="confrim_give_up_register">确定放弃注册？</string>
    <string name="consult">咨 询</string>
    <string name="content_description_icon">icon</string>
    <string name="continue_create">继续创建</string>
    <string name="contribute_cube">来吧，你可添加高达20只股票</string>
    <string name="copy_link_url">复制链接</string>
    <string name="copy_right">All Rights Reserved</string>
    <string name="copy_successful">复制成功</string>
    <string name="could_be_asked_people">可以向这些人发起提问</string>
    <string name="del_cal">删除</string>
    <string name="digest">个人简介</string>
    <string name="digest_hint">请输入个人简介</string>
    <string name="event_type">事件类型</string>
    <string name="gender">性别</string>
    <string name="gender_unknow">未知</string>
    <string name="i_know">我知道了</string>
    <string name="input_event_name">事件名称</string>
    <string name="now">现在</string>
    <string name="place">居住地</string>
    <string name="rel_stock">相关股票</string>
    <string name="save">保存</string>
    <string name="save_cal">保存</string>
    <string name="screen_name">昵称</string>
    <string name="screen_name_hint">请输入昵称</string>
    <string name="share_to_follower">分享给该股票的粉丝</string>
    <string name="tactic_condition">选股条件：</string>
    <string name="tactic_condition_detail">"超跌放量是指，个股的股价在当日出现不合理下跌，并大幅度偏离均价的时候，同时，在价格底部出现成交量放大。一般认为，行情出现超跌放量后，在价格底部出现有力支撑，甚至具备启动拉升的可能。由于行情变化时间较快，适合短线投资者在短周期捕捉超跌强势个股。
本策略以成交量为测量指标，从当日市价偏离均价超过-4%的股票中，选取其中1分钟成交量放大至日均1分钟成交量6倍以上个股，即时推送，便于球友更好的捕捉日内深V反转行情。"</string>
    <string name="tactic_description_detail">策略的选股范围覆盖A股所有个股，内容包括股票名称，累计涨跌幅，触发价格，偏离均价的跌幅，成交量放大倍数。</string>
    <string name="tactic_description_title">内容描述：</string>
    <string name="tactic_push_time">推送时间：</string>
    <string name="tactic_push_time_detail">订阅日内超跌放量股策略，将于盘中自动实时推送。</string>
    <string name="trade_order_list">委托单</string>
    <string name="trade_position">持仓</string>
    <string name="trade_transaction_history">成交记录</string>
    <string name="unknow">未知</string>
</resources>