<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:background="#ffddb26a" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/answer_information" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/text_level1_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/answer_info_detail" android:lineSpacingExtra="4.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="@color/gold_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/answer_info_warning" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tv_ok" android:background="#ffddb26a" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="30.0dip" android:text="@string/i_know" />
    </LinearLayout>
</LinearLayout>