<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/DateTimeDialog" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.xueqiu.android.common.widget.DateTimePicker android:id="@id/DateTimePicker" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:id="@id/ControlButtons" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/DateTimePicker">
        <Button android:id="@id/SetDateTime" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/confirm" android:layout_weight="1.0" />
        <Button android:id="@id/ResetDateTime" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/now" android:layout_weight="1.0" />
        <Button android:id="@id/CancelDialog" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>