<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root_view" android:background="?attr_color_bg" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/form_horizontal_margin" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/form_horizontal_margin" android:layout_marginBottom="10.0dip">
        <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/event_content" android:background="?attr_roundcorner_bg_single" android:paddingLeft="@dimen/form_item_horizontal_padding" android:paddingTop="@dimen/form_item_vertical_padding" android:paddingRight="@dimen/form_item_horizontal_padding" android:paddingBottom="@dimen/form_item_vertical_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/input_event_name" style="@style/form_item_edit_text_style" />
            <RelativeLayout android:gravity="center_vertical" android:id="@id/start_time_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cal_margin_top" style="@style/form_item_style">
                <TextView android:id="@id/start_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cal_start" style="@style/form_item_label_style" />
                <TextView android:id="@id/start_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/cal_start" android:layout_alignParentRight="true" style="@style/form_item_edit_text_style" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center_vertical" android:id="@id/end_time_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/form_item_style">
                <TextView android:id="@id/cal_end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cal_end" style="@style/form_item_label_style" />
                <TextView android:id="@id/end_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/cal_end" android:layout_alignParentRight="true" style="@style/form_item_edit_text_style" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/all_day_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/form_item_style">
                <TextView android:id="@id/all_day" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/all_day" android:layout_centerVertical="true" style="@style/form_item_label_style" />
                <CheckBox android:id="@id/all_day_box" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:drawableRight="?attr_checkbox_selector" android:layout_alignBaseline="@id/all_day" android:layout_alignBottom="@id/all_day" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center_vertical" android:id="@id/time_zone_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/form_item_style">
                <TextView android:id="@id/cal_timezone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cal_timezone" style="@style/form_item_label_style" />
                <TextView android:id="@id/time_zone_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/cal_timezone" android:layout_alignParentRight="true" style="@style/form_item_edit_text_style" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center_vertical" android:id="@id/cal_layout" android:background="?attr_roundcorner_bg_single_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cal_margin_top" style="@style/form_item_style">
                <TextView android:id="@id/calendar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar_text" style="@style/form_item_label_style" />
                <TextView android:id="@id/calendar_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/calendar_text" android:layout_alignParentRight="true" style="@style/form_item_edit_text_style" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center_vertical" android:id="@id/cal_alert_layout" android:background="?attr_roundcorner_bg_single_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cal_margin_top" style="@style/form_item_style">
                <TextView android:id="@id/cal_alert" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cal_alert" style="@style/form_item_label_style" />
                <TextView android:gravity="center|right" android:id="@id/cal_alert_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/cal_alert" android:layout_alignParentRight="true" style="@style/form_item_edit_text_style" />
            </RelativeLayout>
            <EditText android:id="@id/cal_place_edit" android:background="?attr_roundcorner_bg_single" android:paddingLeft="@dimen/form_item_horizontal_padding" android:paddingTop="@dimen/form_item_vertical_padding" android:paddingRight="@dimen/form_item_horizontal_padding" android:paddingBottom="@dimen/form_item_vertical_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/cal_place" style="@style/form_item_label_style" />
            <EditText android:id="@id/cal_mark_text" android:background="?attr_roundcorner_bg_single" android:paddingLeft="@dimen/form_item_horizontal_padding" android:paddingTop="@dimen/form_item_vertical_padding" android:paddingRight="@dimen/form_item_horizontal_padding" android:paddingBottom="@dimen/form_item_vertical_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/cal_mark" style="@style/form_item_edit_text_style" />
            <RelativeLayout android:gravity="center_vertical" android:id="@id/cal_rel_stock_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cal_margin_top" style="@style/form_item_style">
                <TextView android:id="@id/rel_stock_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rel_stock" style="@style/form_item_label_style" />
                <TextView android:gravity="center|right" android:id="@id/rel_stock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/rel_stock" android:layout_alignParentRight="true" style="@style/form_item_edit_text_style" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center_vertical" android:id="@id/cal_share_event_layout" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/form_item_style">
                <TextView android:id="@id/share_follower" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_to_follower" android:layout_centerVertical="true" style="@style/form_item_label_style" />
                <CheckBox android:id="@id/share_follower_box" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:drawableRight="?attr_checkbox_selector" android:layout_alignBaseline="@id/share_follower" android:layout_alignBottom="@id/share_follower" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center_vertical" android:id="@id/event_type_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/form_item_style">
                <TextView android:id="@id/event_type_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/event_type" style="@style/form_item_label_style" />
                <TextView android:gravity="center|right" android:id="@id/event_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/event_type" android:layout_alignParentRight="true" style="@style/form_item_edit_text_style" />
            </RelativeLayout>
            <Button android:gravity="center" android:id="@id/add_more_cal_info" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cal_margin_top" android:text="@string/add_more_cal_info" style="@style/gray_button_style" />
            <Button android:gravity="center" android:id="@id/add_cal_btn" android:background="@drawable/btn_blue_selector" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cal_margin_top" android:text="@string/save_cal" style="@style/blue_button_style" />
            <Button android:gravity="center" android:id="@id/del_cal_btn" android:background="@drawable/btn_blue_selector" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cal_margin_top" android:text="@string/del_cal" style="@style/blue_button_style" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>